# template-vscode-project

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
cmake/: utils.cmake
src/: gtest.g.cpp  main.m.cpp
